HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignNotPlace/Expected.uv
//! Expected diagnostic metadata for the AssignNotPlace rejected-source specimen.

expectedDiagnostic("E-SEM-3131", "rule.18.Assign-NotPlace")
